<resources>
    <string name="app_name">Davilo</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_gender">Gender</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register_in_short">Register</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid Email</string>
    <string name="invalid_password">Password must be >8 characters and contain a number and a letter</string>
    <string name="login_failed">"Login failed"</string>

    <string name="hello_info_fragment">Hello Info fragment</string>
    <string name="title_home">Home</string>
    <string name="title_info">Info</string>
    <string name="action_register">Register</string>
    <string name="app_description">Deutch autonom virtuell interaktive lernen online</string>
    <string name="start_message_not_enrolled">As a first step for using Davilo, Enroll in a Level</string>
    <string name="action_go_to_levelsTab">Show Levels</string>
    <string name="hint_message_level">Enroll in a new level or Continue a level that was enrolled before.</string>
    <string name="levels">Levels</string>
    <string name="MyDavilo">My Davilo</string>
    <string name="LoggedInDescription">"You have signed in with *num1* All of your progress will be saved, no worry about logout"</string>
    <string name="action_log_out">logout</string>
    <string name="favorite">Favorites</string>
    <string name="aboutUs">About us</string>
    <string name="support">Support</string>
    <string name="dictionary">Dictionary</string>
    <string name="confirmation_code">Code</string>
    <string name="action_submit">Submit</string>
    <string name="action_resendCode">Resend Code</string>

</resources>