<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".ui.activity.confirmation.ActivityConfirmation">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2"
            app:layout_constraintWidth_max="450dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/app_name"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_confirm_code"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="24dp"
                    android:hint="@string/confirmation_code"
                    app:boxBackgroundColor="#00ffffff"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/title">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_confirm_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:maxLength="6"
                        android:selectAllOnFocus="true" />

                </com.google.android.material.textfield.TextInputLayout>


                <TextView
                    android:id="@+id/txt_timer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="24dp"
                    android:gravity="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/input_confirm_code"
                    tools:text="Time remaining 5:00" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_resend"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="48dp"
                    android:layout_marginEnd="48dp"
                    android:enabled="false"
                    android:text="@string/action_resendCode"
                    android:textColor="@color/colorPrimary"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="@id/txt_timer"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/txt_timer" />

                <androidx.core.widget.ContentLoadingProgressBar
                    android:id="@+id/pb_resend"
                    style="@style/Widget.AppCompat.ProgressBar"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@id/btn_resend"
                    app:layout_constraintLeft_toRightOf="@id/btn_resend"
                    app:layout_constraintTop_toTopOf="@id/btn_resend" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="48dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="48dp"
                    android:layout_marginBottom="64dp"
                    android:enabled="false"
                    android:text="@string/action_submit"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_resend"
                    app:layout_constraintVertical_bias="0.2" />

                <androidx.core.widget.ContentLoadingProgressBar
                    android:id="@+id/loading"
                    style="@style/Widget.AppCompat.ProgressBar"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@id/btn_submit"
                    app:layout_constraintLeft_toRightOf="@id/btn_submit"
                    app:layout_constraintTop_toTopOf="@id/btn_submit" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>